--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,7 @@ body {
     font-family: var(--chakra-fonts-heading);
     font-weight: var(--chakra-fontWeights-bold);
     font-size: var(--chakra-fontSizes-3xl);
-    color: limegreen;
+    color: var(--chakra-colors-brand-500);
     line-height: 1.33;
 }
 
